--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["ES2021", "DOM", "DOM.Iterable"], 
     "module": "ESNext",
     "moduleResolution": "Node",
     "strict": true,
