--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["ES2021", "DOM", "DOM.Iterable"], 
+    "lib": ["DOM", "DOM.Iterable", "ES2021"],
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",   // ✅ або "node16"
     "strict": true,
     "jsx": "react-jsx",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "noEmit": true,
     "types": ["node"]
